# trekking

./: README.md  main_semReflexo_Ativo.py  main_testePWM.py  trekking.py
corselFirmware/: platformio.ini
corselFirmware/src/: Controle.h  Odometria.h  Serial.h  Ultrassonico.h  defines.h  giroscopio.h  main.cpp  motor.h
src/: .main_semReflexo_Ativo.py.swp  Odometria.py  control.py  gyro.py  main.py  main_semReflexo_Ativo.py  main_semReflexo_Backup.py  motor.py  testeGPIO.py  trekking.py  visao.py
src/Salvos/: main_semReflexo_Ativo.py  main_semReflexo_Backup.py
src/visaoC++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  visaoC  visaoC.cpp
